Page flowing removed from web interface. This resolves tonnes of layout issues, Fixes #38, fixes #15 and fixed #39.

--- a/Yuras/webapp/public/assets/css/viewer.css
+++ b/Yuras/webapp/public/assets/css/viewer.css
@@ -45,7 +45,7 @@ body {
 .annotation-wrapper-padding {
 	padding: 5%;
 	position: relative;
-	height: 100%;
+	height: 200%;
 }
 /* Document styling */
 
@@ -58,8 +58,8 @@ body {
 	position: relative;
 	display: block;
 	background: white;
-	height: 1100px;
-	max-height: 1100px;
+	/*height: 1100px;*/
+	/*max-height: 1100px;*/
 	margin: 25px auto;
 	border: 1px solid #cdcdcd;
 }
